--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -37,7 +37,7 @@ knitr::include_graphics("figures/multi-agyw/risk-grid.png")
 ```
 
 In SSA, adolescent girls and young women (AGYW) aged 15-29 are at increased risk of HIV infection.
-Though AGYW are only 28% of the population, they comprise 44% of new infections [@unaids2021update].
+AGYW account for only 28% of the population, but comprise 44% of new infections [@unaids2021update].
 HIV incidence for AGYW is 2.4 times higher than for similarly aged (15-29) males.
 The social and biological reasons for this disparity include structural vulnerabilities and power imbalances, age patterns of sexual mixing, a younger age at first sex, and increased susceptibility to HIV infection.
 On this basis, AGYW have been identified as a priority population for HIV prevention services.
@@ -138,7 +138,7 @@ number_of_surveys %>%
 
 I used household survey data from 13 countries identified by the Global Fund [@global2018measurement] as priority countries for implementation of AGYW HIV prevention.
 These countries were Botswana, Cameroon, Kenya, Lesotho, Malawi, Mozambique, Namibia, South Africa, Eswatini, Tanzania, Uganda, Zambia and Zimbabwe.
-Surveys conducted in these countries between 1999 and 2018 were included in which both women were interviewed about their sexual behaviour, and sufficient geographic information was available to locate survey clusters to health districts.
+Surveys conducted in these countries between 1999 and 2018 were included in which both women were interviewed about their sexual behaviour, and sufficient geographic data were available to locate survey clusters to health districts.
 There were `r total_surveys` suitable surveys (Figure \@ref(fig:available-surveys)), with a total sample size of `r comma(agyw_surveyed)` women aged 15-29 years.
 Of the respondents, `r comma(agyw_surveyed_age$Y015_019)` were aged 15-19 years, `r comma(agyw_surveyed_age$Y020_024)` were aged 20-24 years, and `r comma(agyw_surveyed_age$Y025_029)` were aged 25-29 years.
 The median number of surveys per country was four, ranging from one in both Botswana and South Africa to six in Uganda.
@@ -196,7 +196,7 @@ knitr::include_graphics(paste0("figures/multi-agyw/category-flowchart.png"))
 
 ### Other data
 
-In addition to the household survey behavioural data, I used estimates of population, PLHIV and new HIV infections stratified by district and age group from HIV estimates published by UNAIDS that were developed using the Naomi model [@eaton2021naomi].
+In addition to the household survey behavioural data, I used estimates of population, PLHIV and new HIV infections stratified according to district and age group from HIV estimates published by UNAIDS that were developed using the Naomi model [@eaton2021naomi].
 I used the most recent 2022 estimates for all countries, apart from Mozambique where, due to data accuracy concerns, I used the 2021 estimates (in which the Cabo Delgado province is excluded due to disruption by conflict).
 I used administrative area hierarchy and geographic boundaries corresponding to those used for health service planning by countries (Table \@ref(tab:area-levels)).
 Exceptions were Cameroon and Kenya, where I conducted analyses one level higher at the department and county levels, respectively.
@@ -286,7 +286,7 @@ I considered four models (Table \@ref(tab:multinomial-models)) for $\eta_{ita}$ 
 Observation random effects $\theta_{ita} \sim \mathcal{N}(0, 1000^2)$ with a vague prior distribution were included in all models to ensure the multinomial-Poisson transformation was valid.
 To capture country-specific proportion estimates for each category, I included category random effects $\beta_k \sim \mathcal{N}(0, \tau_\beta^{-1})$ and country-category random effects $\zeta_{ck} \sim \mathcal{N}(0, \tau_\zeta^{-1})$.
 Heterogeneity in risk group proportions by age was allowed by including age-country-category random effects $\alpha_{ack} \sim \mathcal{N}(0, \tau_\alpha^{-1})$.
-I considered several specifications for the space-category $u_{ik}$ and time-category effects $\gamma_{tk}$, described in Sections \@ref(spatial-re) and \@ref(temporal-re).
+Several specifications were considered for the space-category $u_{ik}$ and time-category effects $\gamma_{tk}$, described in Sections \@ref(spatial-re) and \@ref(temporal-re).
 
 |    | Category $\beta_k$ | Country $\zeta_{ck}$ | Age $\alpha_{ack}$ | Spatial $u_{ik}$ | Temporal $\gamma_{tk}$ |
 | -- | ------------------ | -------------------- | ------------------ | ------------------- | ---------------------- |
@@ -523,7 +523,7 @@ knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depe
 
 ## Prevalence and incidence by risk group {#prev-inc-risk}
 
-Using the most recent risk group proportion estimates, I calculated the following indicators stratified according to district, age group and risk group:
+Using the most recent risk group proportion estimates, I calculated the following indicators, stratified by district, age group and risk group:
 
 1. HIV prevalence $\rho_{iak}$,
 2. the number of people living with HIV (PLHIV) $H_{iak}$,
