--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -132,7 +132,7 @@ knitr::include_graphics(path)
 
 ### Mean squared error
 
-(ref:mse-table) The average mean squared error (MSE) of each inferential model in estimating $\rho$, under different simulation and geometry settings. Entries for FCK and CK on geometry 2 are empty because model was undefined in that case. The units used in this table are thousandths.
+(ref:mse-table) The average mean squared error (MSE) of each inferential model in estimating $\rho$, under different simulation and geometry settings. Entries for FCK and CK on geometry 2 are empty because model was undefined in that case. The units used in this table are expressed in thousandths.
 
 ```{r mse-table}
 gt_mse <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_mse.rds"))
