--- a/references.bib
+++ b/references.bib
@@ -49,7 +49,7 @@
   title = {{Randomized, controlled intervention trial of male circumcision for reduction of HIV infection risk: the ANRS 1265 Trial}},
   author = {Auvert, Bertran and Taljaard, Dirk and Lagarde, Emmanuel and Sobngwi-Tambekou, Joelle and Sitta, R{\'e}mi and Puren, Adrian},
   year = 2005,
-  journal = {PLoS medicine},
+  journal = {PLOS Medicine},
   publisher = {Public Library of Science San Francisco, USA},
   volume = 2,
   number = 11,
@@ -146,7 +146,7 @@
   title = {{Particulate matter air pollution and national and county life expectancy loss in the USA: A spatiotemporal analysis}},
   author = {Bennett, James E and Tamura-Wicks, Helen and Parks, Robbie M and Burnett, Richard T and Pope III, C Arden and Bechle, Matthew J and Marshall, Julian D and Danaei, Goodarz and Ezzati, Majid},
   year = 2019,
-  journal = {PLoS medicine},
+  journal = {PLOS Medicine},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 16,
   number = 7,
@@ -317,7 +317,7 @@
   title = {{Scoring epidemiological forecasts on transformed scales}},
   author = {Bosse, Nikos I and Abbott, Sam and Cori, Anne and van Leeuwen, Edwin and Bracher, Johannes and Funk, Sebastian},
   year = 2023,
-  journal = {PLoS Computational Biology},
+  journal = {PLOS Computational Biology},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 19,
   number = 8,
@@ -407,7 +407,7 @@
   title = {{Characterizing and mapping the spatial variability of HIV risk among adolescent girls and young women: A cross-county analysis of population-based surveys in Eswatini, Haiti, and Mozambique}},
   author = {Brugh, Kristen N and Lewis, Quinn and Haddad, Cameron and Kumaresan, Jon and Essam, Timothy and Li, Michelle S},
   year = 2021,
-  journal = {PLoS One},
+  journal = {PLOS One},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 16,
   number = 12,
@@ -596,7 +596,7 @@
   title = {{Maximum likelihood from incomplete data via the EM algorithm}},
   author = {Dempster, Arthur P and Laird, Nan M and Rubin, Donald B},
   year = 1977,
-  journal = {Journal of the royal statistical society: series B (methodological)},
+  journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
   publisher = {Wiley Online Library},
   volume = 39,
   number = 1,
@@ -749,7 +749,7 @@
 @article{esra2024improved,
   title={Improved Indicators for Subnational Unmet Antiretroviral Therapy Need in the Health System: Updates to the Naomi Model in 2023},
   author={Esra, Rachel and Mmelesi, Mpho and Ketlogetswe, Akeem T. and Wolock, Timothy M. and Howes, Adam and Nong, Tlotlo and Matlhaga, Matshelo Tina and Ratladi, Siphiwe and Ramaabya, Dinah and Imai-Eaton, Jeffrey W.},
-  journal={JAIDS Journal of Acquired Immune Deficiency Syndromes},
+  journal={Journal of Acquired Immune Deficiency Syndromes},
   volume={95},
   number={1S},
   pages={e24-e33},
@@ -1009,7 +1009,7 @@
   title = {{Assessing the validity of sexual behaviour reports in a whole population survey in rural Malawi}},
   author = {Glynn, Judith R and Kayuni, Ndoliwe and Banda, Emmanuel and Parrott, Fiona and Floyd, Sian and Francis-Chizororo, Monica and Nkhata, Misheck and Tanton, Clare and Hemmings, Joanne and Molesworth, Anna and others},
   year = 2011,
-  journal = {{PLoS One}},
+  journal = {{PLOS One}},
   publisher = {Public Library of Science San Francisco, USA},
   volume = 6,
   number = 7,
@@ -1167,7 +1167,7 @@
   title = {{Population sizes, HIV prevalence, and HIV prevention among men who paid for sex in sub-Saharan Africa (2000--2020): A meta-analysis of 87 population-based surveys}},
   author = {Hodgins, Caroline and Stannah, James and Kuchukhidze, Salome and Zembe, Lycias and Eaton, Jeffrey W and Boily, Marie-Claude and Maheu-Giroux, Mathieu},
   year = 2022,
-  journal = {PLoS Medicine},
+  journal = {PLOS Medicine},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 19,
   number = 1,
@@ -1307,7 +1307,7 @@
   title = {{Precision public health for the era of precision medicine}},
   author = {Khoury, Muin J and Iademarco, Michael F and Riley, William T},
   year = 2016,
-  journal = {American journal of preventive medicine},
+  journal = {American Journal of Preventive Medicine},
   publisher = {Elsevier},
   volume = 50,
   number = 3,
@@ -1325,7 +1325,7 @@
   title = {{Bayesian modelling of inseparable space-time variation in disease risk}},
   author = {Knorr-Held, Leonhard},
   year = 2000,
-  journal = {Statistics in medicine},
+  journal = {Statistics in Medicine},
   publisher = {Wiley Online Library},
   volume = 19,
   number = {17-18},
@@ -1614,7 +1614,7 @@
   title = {{No-U-turn sampling for fast Bayesian inference in ADMB and TMB: Introducing the adnuts and tmbstan R packages}},
   author = {Monnahan, Cole C and Kristensen, Kasper},
   year = 2018,
-  journal = {PloS one},
+  journal = {PLOS One},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 13,
   number = 5,
@@ -1891,7 +1891,7 @@
   title = {{HIV surveillance: a global perspective}},
   author = {Pisani, Elizabeth and Lazzari, Stefano and Walker, Neff and Schwartl{\"a}nder, Bernhard},
   year = 2003,
-  journal = {JAIDS Journal of Acquired Immune Deficiency Syndromes},
+  journal = {Journal of Acquired Immune Deficiency Syndromes},
   publisher = {LWW},
   volume = 32,
   pages = {S3--S11}
@@ -2106,7 +2106,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   title = {{The DREAMS core package of interventions: a comprehensive approach to preventing HIV among adolescent girls and young women}},
   author = {Saul, Janet and Bachman, Gretchen and Allen, Shannon and Toiv, Nora F and Cooney, Caroline and Beamon, Ta’Adhmeeka},
   year = 2018,
-  journal = {PLoS One},
+  journal = {PLOS One},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 13,
   number = 12,
@@ -2135,7 +2135,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   title = {{Using community-level prevalence of Loa loa infection to predict the proportion of highly-infected individuals: statistical modelling to support lymphatic filariasis and onchocerciasis elimination programs}},
   author = {Schl{\"u}ter, Daniela K and Ndeffo-Mbah, Martial L and Takougang, Innocent and Ukety, Tony and Wanji, Samuel and Galvani, Alison P and Diggle, Peter J},
   year = 2016,
-  journal = {PLoS neglected tropical diseases},
+  journal = {PLOS Neglected Tropical Diseases},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 10,
   number = 12,
@@ -2279,7 +2279,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   title = {{Bayesian measures of model complexity and fit}},
   author = {Spiegelhalter, David J and Best, Nicola G and Carlin, Bradley P and Van Der Linde, Angelika},
   year = 2002,
-  journal = {Journal of the Royal Statistical Society: Series B (statistical Methodology)},
+  journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
   publisher = {Wiley Online Library},
   volume = 64,
   number = 4,
@@ -2297,7 +2297,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   title = {{The deviance information criterion: 12 years on}},
   author = {Spiegelhalter, David J and Best, Nicola G and Carlin, Bradley P and Van der Linde, Angelika},
   year = 2014,
-  journal = {Journal of the Royal Statistical Society: Series B: Statistical Methodology},
+  journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
   publisher = {JSTOR},
   pages = {485--493}
 }
@@ -2566,7 +2566,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   author = {Wakefield, Jonathan and Lyons, Hilary},
   year = 2010,
   month = {03},
-  journal = {Chapman & Hall/CRC Handbooks of Modern Statistical Methods},
+  journal = {Chapman \& Hall/CRC Handbooks of Modern Statistical Methods},
   volume = 2010,
   pages = {541--558},
   doi = {10.1201/9781420072884-c30}
@@ -2802,7 +2802,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   title = {HIV prevention for the next decade: Appropriate, person-centred, prioritised, effective, combination prevention},
   author = {Godfrey-Faussett, Peter and Frescura, Luisa and Abdool Karim, Quarraisha and Clayton, Michaela and Ghys, Peter D and 2025 prevention targets working group)},
   year = 2022,
-  journal = {PLoS Medicine},
+  journal = {PLOS Medicine},
   publisher = {Public Library of Science San Francisco, CA USA},
   volume = 19,
   number = 9,
@@ -2890,7 +2890,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
 @article{mcgillen2018emerging,
   title={The emerging health impact of voluntary medical male circumcision in Zimbabwe: an evaluation using three epidemiological models},
   author={McGillen, Jessica B and Stover, John and Klein, Daniel J and Xaba, Sinokuthemba and Ncube, Getrude and Mhangara, Mutsa and Chipendo, Geraldine N and Taramusi, Isaac and Beacroft, Leo and Hallett, Timothy B and others},
-  journal={PloS one},
+  journal={PLOS One},
   volume={13},
   number={7},
   pages={e0199453},
