Journal capitalisation correction

--- a/references.bib
+++ b/references.bib
@@ -93,7 +93,7 @@
   title = {{A new infectious disease model for estimating and projecting HIV/AIDS epidemics}},
   author = {Bao, Le},
   year = 2012,
-  journal = {Sexually transmitted infections},
+  journal = {Sexually Transmitted Infections},
   publisher = {BMJ Publishing Group Ltd},
   volume = 88,
   number = {Suppl 2},
@@ -2686,7 +2686,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   title = {{Comparative assessment of the quality of age-at-event reporting in three HIV cohort studies in sub-Saharan Africa}},
   author = {Wringe, A and Cremin, I and Todd, J and McGrath, N and Kasamba, I and Herbst, K and Mushore, P and {\.Z}aba, B and Slaymaker, E},
   year = 2009,
-  journal = {Sexually transmitted infections},
+  journal = {Sexually Transmitted Infections},
   publisher = {The Medical Society for the Study of Venereal Disease},
   volume = 85,
   number = {Suppl 1},
@@ -2714,7 +2714,7 @@ URL = {https://doi.org/10.1214/154957804100000024}
   title = {{Age at first sex: understanding recent trends in African demographic surveys}},
   author = {Zaba, Basia and Pisani, Elizabeth and Slaymaker, Emma and Boerma, J Ties},
   year = 2004,
-  journal = {Sexually transmitted infections},
+  journal = {Sexually Transmitted Infections},
   publisher = {The Medical Society for the Study of Venereal Disease},
   volume = 80,
   number = {suppl 2},
