--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@
 #####################
 title: |
   Bayesian spatio-temporal methods for small-area estimation of HIV indicators
-author: Adam Howes
+author: Adam Thomas Howes
 college: Department of Mathematics
 university: |
   Imperial College London
